fixed overflow issues on the business detail page

--- a/frontend/src/components/BusinessDatailPage/detail.css
+++ b/frontend/src/components/BusinessDatailPage/detail.css
@@ -58,11 +58,9 @@
 
 .recommend {
   margin-left: 20px;
-  /* color: aqua; */
 }
 
 .edit-button {
-  /* margin-top: 10px; */
   background-color: red;
   color: white;
   border-radius: 8px;
@@ -72,7 +70,6 @@
   font-weight: bold;
 }
 .delete-button {
-  /* margin-top: 10px; */
   background-color: red;
   color: white;
   border-radius: 8px;
@@ -80,4 +77,8 @@
   top: 20px;
   font-size: 15px;
   font-weight: bold;
+}
+
+.detail-container {
+  overflow: hidden;
 }
