--- a/frontend/src/components/HomePage/home.css
+++ b/frontend/src/components/HomePage/home.css
@@ -11,13 +11,13 @@ body {
 
 .profile-button {
   height: auto;
-  width: 50px;
   position: absolute;
   left: 85%;
   top: 6%;
   border: none;
   background-color: white;
   cursor: pointer;
+  /* overflow: hidden; */
 }
 
 .all-list {
@@ -34,6 +34,7 @@ body {
 }
 .fas {
   padding-right: 10px;
+  overflow: hidden;
 }
 .list {
   margin: 5px;
@@ -42,6 +43,7 @@ body {
   color: black;
   border-radius: 7px;
   font-size: 18px;
+  cursor: pointer;
 }
 
 .home-icon {
@@ -143,10 +145,6 @@ For business list area
   font-size: 20px;
   font-weight: bold;
   text-decoration: none;
-  /* margin: 10px; */
-  /* margin: auto; */
-  /* margin-top: -120px; */
-  /* margin-left: 10px; */
   position: relative;
   bottom: 90px;
   text-align: center;
@@ -157,7 +155,6 @@ For business list area
   border: 1px solid gray;
   border-radius: 6px;
   padding: 3px;
-  /* background-color: rgb(227, 227, 227); */
   background-color: rgb(244, 57, 57);
   font-family: "Open Sans";
   font-size: 16px;
@@ -166,8 +163,6 @@ For business list area
   position: relative;
   bottom: 70px;
   text-align: left;
-  /* margin-left: -150px; */
-
   width: auto;
 }
 
